Packages_2024/mongoc_1.26.0/mongoc/mongoc_apm.inc


  {$IFDEF read_function}
function mongoc_apm_callbacks_new: Pmongoc_apm_callbacks_t; cdecl; external libmongoc;
procedure mongoc_apm_callbacks_destroy(callbacks: Pmongoc_apm_callbacks_t); cdecl; external libmongoc;
procedure mongoc_apm_set_command_started_cb(callbacks: Pmongoc_apm_callbacks_t; cb: Tmongoc_apm_command_started_cb_t); cdecl; external libmongoc;
procedure mongoc_apm_set_command_succeeded_cb(callbacks: Pmongoc_apm_callbacks_t; cb: Tmongoc_apm_command_succeeded_cb_t); cdecl; external libmongoc;
procedure mongoc_apm_set_command_failed_cb(callbacks: Pmongoc_apm_callbacks_t; cb: Tmongoc_apm_command_failed_cb_t); cdecl; external libmongoc;
procedure mongoc_apm_set_server_changed_cb(callbacks: Pmongoc_apm_callbacks_t; cb: Tmongoc_apm_server_changed_cb_t); cdecl; external libmongoc;
procedure mongoc_apm_set_server_opening_cb(callbacks: Pmongoc_apm_callbacks_t; cb: Tmongoc_apm_server_opening_cb_t); cdecl; external libmongoc;
procedure mongoc_apm_set_server_closed_cb(callbacks: Pmongoc_apm_callbacks_t; cb: Tmongoc_apm_server_closed_cb_t); cdecl; external libmongoc;
procedure mongoc_apm_set_topology_changed_cb(callbacks: Pmongoc_apm_callbacks_t; cb: Tmongoc_apm_topology_changed_cb_t); cdecl; external libmongoc;
procedure mongoc_apm_set_topology_opening_cb(callbacks: Pmongoc_apm_callbacks_t; cb: Tmongoc_apm_topology_opening_cb_t); cdecl; external libmongoc;
procedure mongoc_apm_set_topology_closed_cb(callbacks: Pmongoc_apm_callbacks_t; cb: Tmongoc_apm_topology_closed_cb_t); cdecl; external libmongoc;
procedure mongoc_apm_set_server_heartbeat_started_cb(callbacks: Pmongoc_apm_callbacks_t; cb: Tmongoc_apm_server_heartbeat_started_cb_t); cdecl; external libmongoc;
procedure mongoc_apm_set_server_heartbeat_succeeded_cb(callbacks: Pmongoc_apm_callbacks_t; cb: Tmongoc_apm_server_heartbeat_succeeded_cb_t); cdecl; external libmongoc;
procedure mongoc_apm_set_server_heartbeat_failed_cb(callbacks: Pmongoc_apm_callbacks_t; cb: Tmongoc_apm_server_heartbeat_failed_cb_t); cdecl; external libmongoc;
{$ENDIF read_function}

// === Konventiert am: 15-5-26 15:16:34 ===



{$IFDEF read_implementation}



{$ENDIF read_implementation}
